--- a/index.html
+++ b/index.html
@@ -4,185 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jogo da Memória</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: radial-gradient(circle, #a16eff 0%, #6c00b3 100%);
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    #logo {
-      width: 500px; /* ou o tamanho que desejar */
-      margin-bottom: 10px;
-      animation: pulse 2s infinite;
-    }
-
-    #logo-pequena {
-      width: 180px;
-      margin-bottom: 0px;
-    }
-
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.05); opacity: 0.8; }
-    }
-    
-    #menu {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    #menu button {
-      background-color: #6a1b9a; /* Roxo escuro */
-      color: white;
-      padding: 15px 30px;
-      font-size: 18px;
-      border: none;
-      border-radius: 30px; /* Borda arredondada */
-      cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      transition: all 0.3s ease;
-    }
-
-    #menu button:hover {
-      background-color: #8e24aa; /* Roxo mais claro no hover */
-      transform: scale(1.05);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.3);
-    }
-
-    #game-container {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    #tabuleiro {
-      display: grid;
-      grid-template-columns: repeat(4, 100px);
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    .carta {
-      width: 100px;
-      height: 100px;
-      perspective: 600px;
-      cursor: pointer;
-    }
-
-    .inner {
-      width: 100%;
-      height: 100%;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
-      position: relative;
-    }
-
-    .carta.virada .inner {
-      transform: rotateY(180deg);
-    }
-
-    .frente, .verso {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 40px;
-    }
-
-    .frente {
-      background: white;
-      transform: rotateY(180deg);
-    }
-
-    .verso {
-      background-image: url('verso.jpg');
-      background-size: cover;
-    }
-
-    .placar {
-      display: flex;
-      justify-content: space-around;
-      font-size: 20px;
-      margin: 5px auto;
-      width: 100%;
-      max-width: 1000px;
-      margin-top: 0px;
-    }
-
-    .placar span {
-      margin-top: 0.5px;
-      font-weight: bold;
-    }
-
-    #resultado {
-      margin-top: 20px;
-      font-size: 24px;
-      animation: fadeIn 1s ease-in-out;
-    }
-
-    #timer {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 22px;
-      padding: 5px 15px;
-      border-radius: 5px;
-    }
-
-    #config-btn {
-      position: fixed;
-      top: 10px;
-      left: 20px;
-      cursor: pointer;
-      font-size: 40px;
-    }
-
-    #config-container {
-      position: fixed;
-      top: 70px;
-      left: 20px;
-      z-index: 1000;
-    }
-
-    #menu-config {
-      display: block;
-      background: rgba(66, 2, 109, 0.95);
-      padding: 10px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px #000;
-    }
-
-    #menu-config label,
-    #menu-config button {
-      display: block;
-      margin: 20px, 0;
-      width: 100%;
-      text-align: left;
-      background: none;
-      border: none;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="menu">
@@ -195,13 +17,12 @@
       <div id="config-btn" onclick="toggleMenu()">⚙️</div>
       <div id="menu-config">
         <label><input type="checkbox" id="toggle-som" checked onchange="toggleSons()"> Sons</label>
-        <label><input type="checkbox" id="toggle-music" checked onchange="toggleMusica()"> Música</label><br>
-        <button onclick="reiniciarJogo()">🔄Reiniciar</button>
+        <label><input type="checkbox" id="toggle-music" checked onchange="toggleMusica()"> Música</label>
+        <button onclick="reiniciarJogo()">🔄Reiniciar</button><br>
         <button onclick="voltarMenu()">🚪Sair</button>
       </div>
     </div>
 
-    <!-- LOGO PEQUENA ACIMA DO PLACAR -->
     <img src="memorialogo.png" alt="Logo Pequena" id="logo-pequena">
 
     <div class="placar">
@@ -212,200 +33,12 @@
     <div id="resultado"></div>
   </div>
 
-  <!-- Sons -->
   <audio id="som-inicio" src="inicio.mp3"></audio>
   <audio id="som-virar" src="virar.mp3"></audio>
   <audio id="som-acerto" src="acerto.mp3"></audio>
   <audio id="som-loop" src="loop.mp3" loop></audio>
   <audio id="som-fim" src="fim.mp3"></audio>
 
-  <script>
-    const emojis = ["🐶", "🐶", "🐱", "🐱", "🦊", "🦊", "🐻", "🐻", "🐼", "🐼", "🐨", "🐨", "🐯", "🐯", "🦁", "🦁"];
-    let cartasViradas = [];
-    let bloqueado = false;
-    let jogador = 1;
-    let pontos = {1: 0, 2: 0};
-    let timer;
-    let jogoAcabou = false;
-    let efeitosAtivos = true;
-    let musicaAtiva = true;
-
-    const somInicio = document.getElementById("som-inicio");
-    const somVirar = document.getElementById("som-virar");
-    const somAcerto = document.getElementById("som-acerto");
-    const somLoop = document.getElementById("som-loop");
-    const somFim = document.getElementById("som-fim");
-
-    const volumes = {
-      inicio: 0.02,
-      virar: 0.4,
-      acerto: 0.3,
-      loop: 0.02,
-      fim: 0.4
-    };
-
-    somInicio.volume = volumes.inicio;
-    somVirar.volume = volumes.virar;
-    somAcerto.volume = volumes.acerto;
-    somLoop.volume = volumes.loop;
-    somFim.volume = volumes.fim;
-
-    function iniciar() {
-      document.getElementById("menu").style.display = "none";
-      document.getElementById("game-container").style.display = "flex";
-      iniciarJogo();
-    }
-
-    function iniciarJogo() {
-      document.getElementById("tabuleiro").innerHTML = "";
-      document.getElementById("resultado").textContent = "";
-      pontos = {1: 0, 2: 0};
-      document.getElementById("p1").textContent = 0;
-      document.getElementById("p2").textContent = 0;
-      cartasViradas = [];
-      bloqueado = false;
-      jogador = 1;
-      jogoAcabou = false;
-
-      const cartas = embaralhar([...emojis]);
-      cartas.forEach(emoji => criarCarta(emoji));
-
-      if (efeitosAtivos) {
-        somInicio.currentTime = 0;
-        somInicio.play();
-      }
-
-      if (musicaAtiva) {
-        somLoop.currentTime = 0;
-        somLoop.play();
-      }
-    }
-
-    function reiniciarJogo() {
-      iniciarJogo();
-      document.getElementById("menu-config").style.display = "none";
-    }
-
-    function embaralhar(array) {
-      return array.sort(() => 0.5 - Math.random());
-    }
-
-    function criarCarta(emoji) {
-      const carta = document.createElement("div");
-      carta.classList.add("carta");
-      const inner = document.createElement("div");
-      inner.classList.add("inner");
-      const frente = document.createElement("div");
-      frente.classList.add("frente");
-      frente.textContent = emoji;
-      const verso = document.createElement("div");
-      verso.classList.add("verso");
-      inner.appendChild(frente);
-      inner.appendChild(verso);
-      carta.appendChild(inner);
-      carta.addEventListener("click", () => virarCarta(carta, emoji));
-      document.getElementById("tabuleiro").appendChild(carta);
-    }
-
-    function virarCarta(carta, emoji) {
-      if (carta.classList.contains("virada") || jogoAcabou || bloqueado) return;
-
-      if (efeitosAtivos) {
-        somVirar.currentTime = 0;
-        somVirar.play();
-      }
-
-      carta.classList.add("virada");
-      cartasViradas.push({carta, emoji});
-
-      if (cartasViradas.length === 2) {
-        bloqueado = true;
-        const [c1, c2] = cartasViradas;
-
-        if (c1.emoji === c2.emoji) {
-          pontos[jogador]++;
-          document.getElementById(`p${jogador}`).textContent = pontos[jogador];
-          if (efeitosAtivos) {
-            somAcerto.currentTime = 0;
-            somAcerto.play();
-          }
-          cartasViradas = [];
-          bloqueado = false;
-          verificarFim();
-        } else {
-          setTimeout(() => {
-            c1.carta.classList.remove("virada");
-            c2.carta.classList.remove("virada");
-            cartasViradas = [];
-            bloqueado = false;
-            jogador = jogador === 1 ? 2 : 1;
-          }, 1000);
-        }
-      }
-    }
-
-    function verificarFim() {
-      const todas = document.querySelectorAll(".carta");
-      const viradas = document.querySelectorAll(".carta.virada");
-      if (todas.length === viradas.length) {
-        jogoAcabou = true;
-        clearInterval(timer);
-        let resultado = '';
-        if (pontos[1] > pontos[2]) {
-          resultado = 'Jogador 1 venceu!';
-          document.getElementById("resultado").style.color = "blue";
-        } else if (pontos[2] > pontos[1]) {
-          resultado = 'Jogador 2 venceu!';
-          document.getElementById("resultado").style.color = "red";
-        } else {
-          resultado = 'Empate!';
-          document.getElementById("resultado").style.color = "yellow";
-        }
-        document.getElementById("resultado").textContent = resultado;
-
-        if (efeitosAtivos) {
-          somFim.currentTime = 0;
-          somFim.play();
-        }
-      }
-    }
-
-    function toggleMenu() {
-      const menu = document.getElementById("menu-config");
-      menu.style.display = menu.style.display === "block" ? "none" : "block";
-    }
-
-    function toggleMusica() {
-      musicaAtiva = document.getElementById("toggle-music").checked;
-      if (musicaAtiva) {
-        somLoop.currentTime = 0;
-        somLoop.play();
-      } else {
-        somLoop.pause();
-      }
-    }
-
-    function toggleSons() {
-      efeitosAtivos = document.getElementById("toggle-som").checked;
-      if (efeitosAtivos) {
-        somInicio.volume = volumes.inicio;
-        somVirar.volume = volumes.virar;
-        somAcerto.volume = volumes.acerto;
-        somFim.volume = volumes.fim;
-      } else {
-        somInicio.volume = 0;
-        somVirar.volume = 0;
-        somAcerto.volume = 0;
-        somFim.volume = 0;
-      }
-    }
-
-    function voltarMenu() {
-      document.getElementById("menu-config").style.display = "none";
-      document.getElementById("game-container").style.display = "none";
-      document.getElementById("menu").style.display = "flex";
-      somLoop.pause();
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
